Rename template components and add .sst elements for production environment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "monorepo-template",
+  "name": "notes",
   "version": "0.0.0",
   "workspaces": [
     "packages/*"
@@ -7,9 +7,10 @@
   "scripts": {},
   "devDependencies": {
     "@tsconfig/node22": "^22",
+    "@types/node": "^22.14.0",
     "typescript": "^5"
   },
   "dependencies": {
-    "sst": "^3"
+    "sst": "^3.13.7"
   }
 }
